-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 25
-
Component/s: hotspot
-
b11
java.lang.RuntimeException: must find inlinee method: expected true, was false
at jdk.test.lib.Asserts.fail(Asserts.java:689)
at jdk.test.lib.Asserts.assertTrue(Asserts.java:541)
at compiler.ciReplay.InliningBase.parseLogFile(InliningBase.java:150)
at compiler.ciReplay.TestIncrementalInlining.testAction(TestIncrementalInlining.java:78)
at compiler.ciReplay.DumpReplayBase.runTest(DumpReplayBase.java:54)
at compiler.ciReplay.InliningBase.runTest(InliningBase.java:62)
at compiler.ciReplay.TestIncrementalInlining.<init>(TestIncrementalInlining.java:72)
at compiler.ciReplay.TestIncrementalInlining.main(TestIncrementalInlining.java:57)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
at java.base/java.lang.Thread.run(Thread.java:1447)
at jdk.test.lib.Asserts.fail(Asserts.java:689)
at jdk.test.lib.Asserts.assertTrue(Asserts.java:541)
at compiler.ciReplay.InliningBase.parseLogFile(InliningBase.java:150)
at compiler.ciReplay.TestIncrementalInlining.testAction(TestIncrementalInlining.java:78)
at compiler.ciReplay.DumpReplayBase.runTest(DumpReplayBase.java:54)
at compiler.ciReplay.InliningBase.runTest(InliningBase.java:62)
at compiler.ciReplay.TestIncrementalInlining.<init>(TestIncrementalInlining.java:72)
at compiler.ciReplay.TestIncrementalInlining.main(TestIncrementalInlining.java:57)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
at java.base/java.lang.Thread.run(Thread.java:1447)
- caused by
-
JDK-8319850 PrintInlining should print which methods are late inlines
-
- Resolved
-
- duplicates
-
JDK-8349190 Test compiler/ciReplay/TestInliningProtectionDomain.java is failing
-
- Closed
-
- relates to
-
JDK-8374954 [lworld] compiler/ciReplay/TestInliningProtectionDomain.java fails with virtual threads
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/a60e523f
-
Review(master)
openjdk/jdk/26654