8349191: Test compiler/ciReplay/TestIncrementalInlining.java failed

Reviewed-by: mhaessig, dfenacci, chagedorn